--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   right: 10px;
   background: white;
   padding: 10px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   max-width: 500px;
 }
 
